--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "better-sqlite3": "^12.4.1",
     "eslint": "^9.34.0",
     "install": "^0.13.0",
+    "nodemailer": "^7.0.9",
     "nuxt": "^4.0.3",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.9.2",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^7.0.2"
   }
 }
