--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "install": "^0.13.0",
     "nodemailer": "^7.0.9",
     "nuxt": "^4.0.3",
+    "resend": "^6.2.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.9.2",
     "vue": "^3.5.20",
